<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.box.l10n.mojito</groupId>
    <artifactId>mojito-parent</artifactId>
    <version>0.111-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Mojito</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.1</version>
    </parent>

    <properties>
        <spring-boot.version>3.3.1</spring-boot.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <maven.compiler.version>3.11.0</maven.compiler.version>
        <maven.deploy.version>2.8.2</maven.deploy.version>
        <maven.release.version>2.5.3</maven.release.version>
        <okapi.version>1.46.0</okapi.version>
        <guava.version>29.0-jre</guava.version>
        <aspectj-maven-plugin.version>1.14</aspectj-maven-plugin.version>
        <!-- org.codehaus.mojo doesn't support Java 17+, use fork for now -->
        <aspectj-maven-plugin.group-id>dev.aspectj</aspectj-maven-plugin.group-id>
        <auto-value.version>1.7.4</auto-value.version>
        <immutables-value.version>2.8.2</immutables-value.version>
        <plugin.version.google-java-format>1.22.0</plugin.version.google-java-format>
        <jjwt.version>0.10.5</jjwt.version>
        <github.api.version>1.313</github.api.version>
        <icu4j.version>64.2</icu4j.version>
        <docker.compose.detached.mode>true</docker.compose.detached.mode>
        <docker.compose.remove.volumes>true</docker.compose.remove.volumes>
        <aspectj.version>1.9.21</aspectj.version>
        <jackson.version>2.13.5</jackson.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <dependency>
            <groupId>org.immutables</groupId>
            <artifactId>value</artifactId>
            <version>${immutables-value.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- to fix warning in maven: can't find aspectrj in classpath -->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
            <version>${aspectj.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- TODO(spring2) remove -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-properties-migrator</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>com.ibm.icu</groupId>
            <artifactId>icu4j</artifactId>
            <version>${icu4j.version}</version>
        </dependency>

    </dependencies>

    <!-- SCM setup to push changes to the Github repo on release -->
    <scm>
        <url>https://github.com/jeeyi/mojito</url>
        <connection>scm:git:git@github.com:box/mojito.git</connection>
        <developerConnection>scm:git:git@github.com:box/mojito.git</developerConnection>
        <tag>v0.47</tag>
    </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <!-- if having issue with Intellij: in project confiugration toy with the
                annotation processor: Enable annotation processing -> from classpath. Not clear
                 why it changes to processor path afterwards, re-sync maven project? -->
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <dependency>
                            <groupId>org.immutables</groupId>
                            <artifactId>value</artifactId>
                            <version>${immutables-value.version}</version>
                        </dependency>
                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                            <version>${spring-boot.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven.release.version}</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <releaseProfiles>release</releaseProfiles>
                    <scmCommentPrefix xml:space="preserve">MOJITO RELEASE: </scmCommentPrefix>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.24.1</version>
                <configuration>
                    <java>
                        <excludes>
                            <exclude>src/main/java/db/migration/*.java</exclude>
                        </excludes>
                        <googleJavaFormat>
                            <version>${plugin.version.google-java-format}</version>
                        </googleJavaFormat>
                    </java>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.google.googlejavaformat</groupId>
                        <artifactId>google-java-format</artifactId>
                        <version>${plugin.version.google-java-format}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>com.dkanejs.maven.plugins</groupId>
                <artifactId>docker-compose-maven-plugin</artifactId>
                <version>4.0.0</version>
                <configuration>
                    <composeFiles>
                        <composeFile>./docker/docker-compose-api-worker.yml</composeFile>
                    </composeFiles>
                    <ignorePullFailures>true</ignorePullFailures>
                    <detachedMode>${docker.compose.detached.mode}</detachedMode>
                    <removeVolumes>${docker.compose.remove.volumes}</removeVolumes>
                    <build>true</build>
                </configuration>
                <executions>
                    <execution>
                        <id>api-worker-cluster-up</id>
                        <goals>
                            <goal>up</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>api-worker-cluster-down</id>
                        <goals>
                            <goal>down</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <debug>false</debug>
                            <optimize>true</optimize>
                        </configuration>
                    </plugin>

                    <!-- Generate sources and attach the artifact to the build -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- Generate JavaDoc and attach the artifact to the build -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>

        </profile>
    </profiles>

    <modules>
        <module>cli</module>
        <module>restclient</module>
        <module>test-common</module>
        <module>common</module>
        <module>webapp</module>
        <module>mavenplugin</module>
    </modules>
</project>